tests/ui/associated-inherent-types/not-found-self-type-differs.local.stderr
error[E0220]: associated type `Proj` not found for `Family<PathBuf>` in the current scope
  --> $DIR/not-found-self-type-differs.rs:21:40
   |
LL | struct Family<T>(T);
   | ---------------- associated item `Proj` not found for this struct
...
LL |     let _: Family<std::path::PathBuf>::Proj = ();
   |                                        ^^^^ associated item not found in `Family<PathBuf>`
   |
   = note: the associated type was found for
           - `Family<()>`
           - `Family<Result<T, ()>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0220`.
